<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/introTitle_text" 
         android:textAppearance="?android:attr/textAppearanceLarge" 
         
         />
     
          <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/belowIntroTitle1_text"   
         />

          <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/belowIntroTitle2_text"   
         />          
          
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/abs__action_bar_default_height"
         android:text="@string/setupTitle_text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
     
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/belowSetupTitle1_text"
              android:textStyle="italic" />
         
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/belowSetupTitle2_text"
              android:textStyle="bold" />
         
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/belowSetupTitle3_text"
              android:textStyle="bold" />
         
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/belowSetupTitle4_text"
              android:textStyle="bold" />
    
     <Button
        android:id="@+id/kartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kartButtonString" />
     


</LinearLayout>